<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F1F6"
    tools:context=".screens.HistoryActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/title_history"
        android:textColor="#34333C"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/history_rv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="12dp"
        android:orientation="vertical"
        android:paddingBottom="2dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/bottom_history_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText"
        tools:listitem="@layout/recycler_view_item" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_history_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:context=".screens.BottomFragment">

        <ImageView
            android:id="@+id/imageView_background_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/shape" />

        <EditText
            android:id="@+id/ETShortenLinkHistory"
            android:layout_width="340dp"
            android:layout_height="56dp"
            android:layout_margin="25dp"
            android:background="@drawable/body_for_edit_text"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/hint_shorten_link"
            android:textAlignment="center"
            android:textColor="@color/my_grey"
            android:textColorHint="@color/hint_color"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_shorten_it_history"
            android:layout_width="340dp"
            android:layout_height="56dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:backgroundTint="@color/main_blue"
            android:fontFamily="sans-serif-medium"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/button_text"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:cornerRadius="7dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ETShortenLinkHistory" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>